--- a/index.html
+++ b/index.html
@@ -151,9 +151,12 @@
     <section class="access-section">
         <img src="img/access-title.svg" alt="あくせす" class="section-title">
         <div class="access-content">
-            <div class="access-info">
+            
+            <div class="access-info"><div class="access-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.7970959170675!2d139.7129646!3d35.6327283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b18ca4f112d%3A0x8595e4d5e0b5de4f!2z5qCq5byP5Lya56S-44OR44OD44Kv44K544Kv44Oq44Ko44Kk44K344On44Oz!5e0!3m2!1sja!2sjp!4v1754306654028!5m2!1sja!2sjp" width="100%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
                 <h3>プティスール</h3>
-                <p>住所：東京都新宿区新宿4-◯◯◯◯◯◯◯◯ビル4F<br>
+                <p>住所：東京都新宿区新宿4-30-2ビル4F<br>
                 営業時間：18:00~5:00<br>
                 定休日：年中無休<br>
                 電話：(010)-0000-0000</p>
@@ -161,10 +164,6 @@
                     <img src="img/sns-x.svg" alt="X">
                     <img src="img/sns-insta.svg" alt="Instagram">
                 </div>
-            </div>
-            <div class="access-map">
-                <!-- Map placeholder -->
-                <div class="map-placeholder"></div>
             </div>
         </div>
     </section>
