--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>プティスール - Petite soueur</title>
+    <meta name="description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。営業時間18:00~5:00、年中無休。">
+    <meta name="keywords" content="プティスール,Petite soueur,コンセプトカフェ,妹カフェ,目黒,東京,下目黒">
+    <meta property="og:title" content="プティスール - Petite soueur">
+    <meta property="og:description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="img/main.webp">
+    <meta property="og:site_name" content="プティスール">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="プティスール - Petite soueur">
+    <meta name="twitter:description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -45,7 +56,7 @@
         <div class="hero-content">
             <!-- Main Photo -->
             <div class="main-photo-container">
-                <img src="img/main.png" alt="メンバー写真" class="main-photo">
+                <img src="img/main.webp" alt="メンバー写真" class="main-photo">
             </div>
 
             <!-- Logo and Menu Container -->
@@ -72,9 +83,28 @@
         </div>
     </header>
 
+    <!-- Mobile Menu (shown only on mobile) -->
+    <div class="mobile-menu-container">
+        <div class="mobile-menu-grid">
+            <div class="menu-item">
+                <img src="img/news-menu.svg" alt="おしらせ" class="menu-icon">
+            </div>
+            <div class="menu-item">
+                <img src="img/cast-menu.svg" alt="きゃすと" class="menu-icon">
+            </div>
+            <div class="menu-item">
+                <img src="img/price-menu.svg" alt="りょうきん" class="menu-icon">
+            </div>
+            <div class="menu-item">
+                <img src="img/access-menu.svg" alt="あくせす" class="menu-icon">
+            </div>
+        </div>
+    </div>
+
     <!-- Message Section -->
     <section class="message-section">
-        <img src="img/letter-pc.png" alt="おかえりなさい おにいちゃん" class="message-image">
+        <img src="img/letter-pc.webp" alt="おかえりなさい おにいちゃん" class="message-image message-pc">
+        <img src="img/letter-sp.webp" alt="おかえりなさい おにいちゃん" class="message-image message-sp">
     </section>
 
     <!-- News Section -->
@@ -82,17 +112,31 @@
         <img src="img/news-title.png" alt="おしらせ" class="section-title">
         <div class="news-items">
             <div class="news-item">
-                <img src="img/Google_AI_Studio_2025-07-28T03_14_11.849Z 1.jpg" alt="ニュース画像" class="news-image">
+                <img src="img/news-01.jpg" alt="ニュース画像" class="news-image">
                 <div class="news-content">
                     <p>ティナたなちゃんの誕生日会を今月30日に開催しますので、ぜひご参加ください♪</p>
                     <span class="news-date">2025.12.02</span>
                 </div>
             </div>
             <div class="news-item">
-                <img src="img/Google_AI_Studio_2025-07-28T03_19_42.720Z 1.jpg" alt="ニュース画像" class="news-image">
+                <img src="img/news-01.jpg" alt="ニュース画像" class="news-image">
                 <div class="news-content">
                     <p>さくら(16)ちゃんが体験入店しました。やさしいおにいちゃんお待ちしております。</p>
                     <span class="news-date">2025.12.12</span>
+                </div>
+            </div>
+            <div class="news-item">
+                <img src="img/news-01.jpg" alt="ニュース画像" class="news-image">
+                <div class="news-content">
+                    <p>新年キャンペーン実施中！期間限定でお得な料金でご利用いただけます。</p>
+                    <span class="news-date">2025.12.20</span>
+                </div>
+            </div>
+            <div class="news-item">
+                <img src="img/news-01.jpg" alt="ニュース画像" class="news-image">
+                <div class="news-content">
+                    <p>みく(18)ちゃんがデビューしました！元気いっぱいの妹キャラです♪</p>
+                    <span class="news-date">2025.12.25</span>
                 </div>
             </div>
         </div>
@@ -106,30 +150,30 @@
         <img src="img/cast-title.png" alt="きゃすと" class="section-title">
         <div class="cast-grid">
             <div class="cast-member">
-                <img src="img/image 1.jpg" alt="キャスト" class="cast-image">
+                <img src="img/cast-01.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
-                    <img src="img/name-tag.png" alt="ティナたな" class="name-tag-bg">
+                    <img src="img/name-tag.svg" alt="ティナたな" class="name-tag-bg">
                     <span class="name-text">ティナたな</span>
                 </div>
             </div>
             <div class="cast-member">
-                <img src="img/image 1.jpg" alt="キャスト" class="cast-image">
+                <img src="img/cast-01.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
-                    <img src="img/name-tag.png" alt="ティナたな" class="name-tag-bg">
+                    <img src="img/name-tag.svg" alt="ティナたな" class="name-tag-bg">
                     <span class="name-text">ティナたな</span>
                 </div>
             </div>
             <div class="cast-member">
-                <img src="img/image 1.jpg" alt="キャスト" class="cast-image">
+                <img src="img/cast-01.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
-                    <img src="img/name-tag.png" alt="ティナたな" class="name-tag-bg">
+                    <img src="img/name-tag.svg" alt="ティナたな" class="name-tag-bg">
                     <span class="name-text">ティナたな</span>
                 </div>
             </div>
             <div class="cast-member">
-                <img src="img/image 1.jpg" alt="キャスト" class="cast-image">
+                <img src="img/cast-01.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
-                    <img src="img/name-tag.png" alt="ティナたな" class="name-tag-bg">
+                    <img src="img/name-tag.svg" alt="ティナたな" class="name-tag-bg">
                     <span class="name-text">ティナたな</span>
                 </div>
             </div>
@@ -141,7 +185,8 @@
 
     <!-- System Section -->
     <section class="system-section">
-        <img src="img/system-pc.png" alt="おたのしみ料金システム" class="system-image">
+        <img src="img/system-pc.webp" alt="おたのしみ料金システム" class="system-image system-pc">
+        <img src="img/system-sp.webp" alt="おたのしみ料金システム" class="system-image system-sp">
         <button class="section-btn">
             <img src="img/system-btn.png" alt="料金">
         </button>
@@ -156,10 +201,10 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.7970959170675!2d139.7129646!3d35.6327283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b18ca4f112d%3A0x8595e4d5e0b5de4f!2z5qCq5byP5Lya56S-44OR44OD44Kv44K544Kv44Oq44Ko44Kk44K344On44Oz!5e0!3m2!1sja!2sjp!4v1754306654028!5m2!1sja!2sjp" width="100%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
                 <h3>プティスール</h3>
-                <p>住所：東京都新宿区新宿4-30-2ビル4F<br>
-                営業時間：18:00~5:00<br>
+                <p>住所：東京都目黒区下目黒4-30-2-4F<br>
+                営業時間：18:00 ~ 5:00<br>
                 定休日：年中無休<br>
-                電話：(010)-0000-0000</p>
+                電話：090-0000-0000</p>
                 <div class="sns-links">
                     <img src="img/sns-x.svg" alt="X">
                     <img src="img/sns-insta.svg" alt="Instagram">
@@ -170,7 +215,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>サイトポリシー / お問い合わせ / 会社概要</p>
+        <p>サイトポリシー / 会社概要</p>
         <p>2025 XXXXX Co., Ltd. All Rights Reserved.</p>
     </footer>
 </body>
