下層ページ作成

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>プティスール - Petite soueur</title>
-    <meta name="description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。営業時間18:00~5:00、年中無休。">
-    <meta name="keywords" content="プティスール,Petite soueur,コンセプトカフェ,妹カフェ,目黒,東京,下目黒">
-    <meta property="og:title" content="プティスール - Petite soueur">
-    <meta property="og:description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
+    <title>プティスール - Petite soeur</title>
+    <meta name="description" content="東京のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。営業時間18:00~5:00、年中無休。">
+    <meta name="keywords" content="プティスール,Petite soeur,コンセプトカフェ,妹カフェ,東京">
+    <meta property="og:title" content="プティスール - アキバのコンカフェ">
+    <meta property="og:description" content="東京のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:image" content="img/main.webp">
+    <meta property="og:image" content="img/main-og.jpg">
     <meta property="og:site_name" content="プティスール">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="プティスール - Petite soueur">
-    <meta name="twitter:description" content="東京都目黒区のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
+    <meta name="twitter:title" content="プティスール - Petite soeur">
+    <meta name="twitter:description" content="東京のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&family=Noto+Sans+JP:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -61,10 +61,10 @@
 
             <!-- Logo and Menu Container -->
             <div class="logo-menu-container">
-                <div class="menu-item menu-outer">
+                <div class="menu-item menu-outer" onclick="location.href='news.html'">
                     <img src="img/news-menu.svg" alt="おしらせ" class="menu-icon">
                 </div>
-                <div class="menu-item menu-center">
+                <div class="menu-item menu-center" onclick="location.href='cast.html'">
                     <img src="img/cast-menu.svg" alt="きゃすと" class="menu-icon">
                 </div>
 
@@ -73,10 +73,10 @@
                     <img src="img/main-logo.png" alt="プティスール Petite soul" class="main-logo">
                 </div>
 
-                <div class="menu-item menu-center">
+                <div class="menu-item menu-center" onclick="location.href='price.html'">
                     <img src="img/price-menu.svg" alt="りょうきん" class="menu-icon">
                 </div>
-                <div class="menu-item menu-outer">
+                <div class="menu-item menu-outer" onclick="location.href='access.html'">
                     <img src="img/access-menu.svg" alt="あくせす" class="menu-icon">
                 </div>
             </div>
@@ -86,16 +86,16 @@
     <!-- Mobile Menu (shown only on mobile) -->
     <div class="mobile-menu-container">
         <div class="mobile-menu-grid">
-            <div class="menu-item">
+            <div class="menu-item" onclick="location.href='news.html'">
                 <img src="img/news-menu.svg" alt="おしらせ" class="menu-icon">
             </div>
-            <div class="menu-item">
+            <div class="menu-item" onclick="location.href='cast.html'">
                 <img src="img/cast-menu.svg" alt="きゃすと" class="menu-icon">
             </div>
-            <div class="menu-item">
+            <div class="menu-item" onclick="location.href='price.html'">
                 <img src="img/price-menu.svg" alt="りょうきん" class="menu-icon">
             </div>
-            <div class="menu-item">
+            <div class="menu-item" onclick="location.href='access.html'">
                 <img src="img/access-menu.svg" alt="あくせす" class="menu-icon">
             </div>
         </div>
@@ -140,7 +140,7 @@
                 </div>
             </div>
         </div>
-        <button class="section-btn">
+        <button class="section-btn" onclick="location.href='news.html'">
             <img src="img/news-btn.svg" alt="おしらせ一覧">
         </button>
     </section>
@@ -178,7 +178,7 @@
                 </div>
             </div>
         </div>
-        <button class="section-btn">
+        <button class="section-btn" onclick="location.href='cast.html'">
             <img src="img/cast-btn.svg" alt="きゃすと一覧">
         </button>
     </section>
@@ -187,7 +187,7 @@
     <section class="system-section">
         <img src="img/system-pc.webp" alt="おたのしみ料金システム" class="system-image system-pc">
         <img src="img/system-sp.webp" alt="おたのしみ料金システム" class="system-image system-sp">
-        <button class="section-btn">
+        <button class="section-btn" onclick="location.href='price.html'">
             <img src="img/system-btn.png" alt="料金">
         </button>
     </section>
