--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>プティスール - Petite soeur</title>
     <meta name="description" content="東京のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。営業時間18:00~5:00、年中無休。">
     <meta name="keywords" content="プティスール,Petite soeur,コンセプトカフェ,妹カフェ,東京">
-    <meta property="og:title" content="プティスール - アキバのコンカフェ">
+    <meta property="og:title" content="プティスール - アキバのふわふわ妹系コンカフェ">
     <meta property="og:description" content="東京のコンセプトカフェ「プティスール」。妹系キャストがお兄ちゃんをお出迎え。">
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:image" content="img/main-og.jpg">
+    <meta property="og:image" content="https://petite-soueur.vercel.app/img/main-og.jpg">
     <meta property="og:site_name" content="プティスール">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="プティスール - Petite soeur">
