文字色調整

--- a/cast.html
+++ b/cast.html
@@ -201,11 +201,11 @@
                             <span class="info-value">焼肉🥩</span>
                         </div>
                         <div class="cast-info-row">
-                            <span class="info-label">好きな好きなお酒🍺</span>
+                            <span class="info-label">好きな好きなお酒</span>
                             <span class="info-value">梅酒🌶</span>
                         </div>
                         <div class="cast-info-row">
-                            <span class="info-label">休日の過ごし方🏠</span>
+                            <span class="info-label">休日の過ごし方</span>
                             <span class="info-value">友達と遊ぶ❤️</span>
                         </div>
                     </div>
