indexページからキャスト詳細へのリンク機能を追加
- indexのキャスト写真をクリックで詳細へジャンプ
- cast.htmlの各詳細にIDを追加
- ホバー時の拡大アニメーション追加
- スムーススクロール実装

--- a/cast.html
+++ b/cast.html
@@ -78,7 +78,7 @@
         
         <!-- Detailed Cast Members -->
         <div class="cast-detail-section">
-            <div class="cast-detail">
+            <div class="cast-detail" id="cast-1">
                 <div class="cast-detail-left">
                     <img src="img/cast-01.jpg" alt="ティナたな" class="cast-detail-image">
                 </div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             
-            <div class="cast-detail">
+            <div class="cast-detail" id="cast-2">
                 <div class="cast-detail-left">
                     <img src="img/cast-02.jpg" alt="マリーサマリー" class="cast-detail-image">
                 </div>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="cast-detail">
+            <div class="cast-detail" id="cast-3">
                 <div class="cast-detail-left">
                     <img src="img/cast-03.jpg" alt="みっちゃむ" class="cast-detail-image">
                 </div>
@@ -183,7 +183,7 @@
                 </div>
             </div>
 
-            <div class="cast-detail">
+            <div class="cast-detail" id="cast-4">
                 <div class="cast-detail-left">
                     <img src="img/cast-04.jpg" alt="まきなみ" class="cast-detail-image">
                 </div>
