--- a/index.html
+++ b/index.html
@@ -150,34 +150,34 @@
     <section class="cast-section">
         <img src="img/cast-title.png" alt="きゃすと" class="section-title">
         <div class="cast-grid">
-            <div class="cast-member">
+            <a href="cast.html#cast-1" class="cast-member">
                 <img src="img/cast-01.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
                     <img src="img/name-tag.svg" alt="ゆいな" class="name-tag-bg">
                     <span class="name-text">ティナたな</span>
                 </div>
-            </div>
-            <div class="cast-member">
+            </a>
+            <a href="cast.html#cast-2" class="cast-member">
                 <img src="img/cast-02.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
                     <img src="img/name-tag.svg" alt="マリーサマリー" class="name-tag-bg">
                     <span class="name-text">マリーサマリー</span>
                 </div>
-            </div>
-            <div class="cast-member">
+            </a>
+            <a href="cast.html#cast-3" class="cast-member">
                 <img src="img/cast-03.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
                     <img src="img/name-tag.svg" alt="みっちゃむ" class="name-tag-bg">
                     <span class="name-text">みっちゃむ</span>
                 </div>
-            </div>
-            <div class="cast-member">
+            </a>
+            <a href="cast.html#cast-4" class="cast-member">
                 <img src="img/cast-04.jpg" alt="キャスト" class="cast-image">
                 <div class="name-tag">
                     <img src="img/name-tag.svg" alt="まきなみ" class="name-tag-bg">
                     <span class="name-text">まきなみ</span>
                 </div>
-            </div>
+            </a>
         </div>
         <button class="section-btn" onclick="location.href='cast.html'">
             <img src="img/cast-btn.svg" alt="きゃすと一覧">
