テキスト修正

--- a/price.html
+++ b/price.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="price-item">
                     <div class="price-name">追加おつまみ<br>
-                    （ラクガキありは1,650円）</div>
+                    （お品書きはスタッフへ）</div>
                     <div class="price-value">550円</div>
                 </div>
                 <div class="price-item">
