アクセス情報のレイアウトとスタイル調整
- 最寄り駅に装飾を追加（電車アイコンと点線）
- 店名をセンター揃えに変更
- 最寄り駅の文字色を通常色に統一
- SPの店名サイズをPCと同じに調整

--- a/access.html
+++ b/access.html
@@ -90,17 +90,17 @@
                 <div class="access-map" style="margin-bottom: 30px; width: 100%;">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.7970959170675!2d139.7129646!3d35.6327283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b18ca4f112d%3A0x8595e4d5e0b5de4f!2z5qCq5byP5Lya56S-44OR44OD44Kv44K544Kv44Oq44Ko44Kk44K344On44Oz!5e0!3m2!1sja!2sjp!4v1754306654028!5m2!1sja!2sjp" width="100%" height="450" style="border:0; border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
+                <h3 style="text-align: center;">プティスール</h3>
                 <div class="access-info-content">
                     <div class="access-info-left">
-                        <h3>プティスール</h3>
                         <p>東京都目黒区下目黒4-30-2-4F<br>
                         営業時間：18:00 ~ 5:00<br>
                         定休日：年中無休<br>
                         電話：090-0000-0000</p>
                     </div>
                     <div class="access-info-right">
-                        <h3>アクセス方法</h3>
-                        <p>JR目黒駅 西口より徒歩5分<br>
+                        <p><span class="station-title">🚃　最寄り駅　🚃</span><br>
+                        JR目黒駅 西口より徒歩5分<br>
                         東急目黒線 目黒駅より徒歩5分<br>
                         都営三田線 目黒駅より徒歩5分</p>
                     </div>
