--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                         電話：090-0000-0000</p>
                     </div>
                     <div class="access-info-right">
-                        <p>JR目黒駅 西口より徒歩5分<br>
+                        <p><span class="station-title">🚃　最寄り駅　🚃</span><br>
+                        JR目黒駅 西口より徒歩5分<br>
                         東急目黒線 目黒駅より徒歩5分<br>
                         都営三田線 目黒駅より徒歩5分</p>
                     </div>
