キャストプロフィールに誕生日を追加
- ティナたな: 3月15日
- マリーサマリー: 7月22日
- みっちゃむ: 11月8日
- まきなみ: 5月30日

--- a/cast.html
+++ b/cast.html
@@ -89,6 +89,10 @@
                     </div>
                     <div class="cast-detail-info">
                         <div class="cast-info-row">
+                            <span class="info-label">お誕生日</span>
+                            <span class="info-value">3月15日</span>
+                        </div>
+                        <div class="cast-info-row">
                             <span class="info-label">出身地</span>
                             <span class="info-value">大阪府</span>
                         </div>
@@ -123,6 +127,10 @@
                         <h3 class="cast-name-large">マリーサマリー</h3>
                     </div>
                     <div class="cast-detail-info">
+                        <div class="cast-info-row">
+                            <span class="info-label">お誕生日</span>
+                            <span class="info-value">7月22日</span>
+                        </div>
                         <div class="cast-info-row">
                             <span class="info-label">出身地</span>
                             <span class="info-value">千葉県</span>
@@ -159,6 +167,10 @@
                     </div>
                     <div class="cast-detail-info">
                         <div class="cast-info-row">
+                            <span class="info-label">お誕生日</span>
+                            <span class="info-value">11月8日</span>
+                        </div>
+                        <div class="cast-info-row">
                             <span class="info-label">出身地</span>
                             <span class="info-value">福岡県</span>
                         </div>
@@ -193,6 +205,10 @@
                         <h3 class="cast-name-large">まきなみ</h3>
                     </div>
                     <div class="cast-detail-info">
+                        <div class="cast-info-row">
+                            <span class="info-label">お誕生日</span>
+                            <span class="info-value">5月30日</span>
+                        </div>
                         <div class="cast-info-row">
                             <span class="info-label">出身地</span>
                             <span class="info-value">とーきょー🐬</span>
