まきなみの誕生日にケーキ絵文字を追加

--- a/cast.html
+++ b/cast.html
@@ -207,7 +207,7 @@
                     <div class="cast-detail-info">
                         <div class="cast-info-row">
                             <span class="info-label">お誕生日</span>
-                            <span class="info-value">5月30日</span>
+                            <span class="info-value">5月30日 🎂</span>
                         </div>
                         <div class="cast-info-row">
                             <span class="info-label">出身地</span>
