Petite soulをPetite soeurに修正
- 全ページのロゴalt属性を正しいスペル'Petite soeur'に変更

--- a/access.html
+++ b/access.html
@@ -41,7 +41,7 @@
                 <!-- Main Logo (center) -->
                 <div class="main-logo-container">
                     <a href="index.html">
-                        <img src="img/main-logo.svg" alt="プティスール Petite soul" class="main-logo">
+                        <img src="img/main-logo.svg" alt="プティスール Petite soeur" class="main-logo">
                     </a>
                 </div>
 
