--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <!-- Main Logo (center) -->
                 <div class="main-logo-container">
-                    <img src="img/main-logo.svg" alt="プティスール Petite soul" class="main-logo">
+                    <img src="img/main-logo.svg" alt="プティスール Petite soeur" class="main-logo">
                 </div>
 
                 <div class="menu-item menu-center" onclick="location.href='price.html'">
