--- a/company.html
+++ b/company.html
@@ -41,7 +41,7 @@
                 <!-- Main Logo (center) -->
                 <div class="main-logo-container">
                     <a href="index.html">
-                        <img src="img/main-logo.svg" alt="プティスール Petite soul" class="main-logo">
+                        <img src="img/main-logo.svg" alt="プティスール Petite soeur" class="main-logo">
                     </a>
                 </div>
 
