--- a/price.html
+++ b/price.html
@@ -210,6 +210,10 @@
                 </div>
                 <div class="drink-menu-bottom-bg"></div>
             </div>
+            
+            <div style="text-align: center; margin-top: 30px;">
+                <img src="img/pisupisu.webp" alt="ぴすぴす" style="max-width: 100%; width: 600px; height: auto;">
+            </div>
         </div>
     </section>
 
