料金ページにメッセージ吹き出し機能を追加
- wait.svgをmessage-01〜05.svgに変更
- マウスオーバーでランダムメッセージ表示
- ビョーンと弾むアニメーション実装
- 吹き出し自体はマウスオーバー無効化

--- a/price.html
+++ b/price.html
@@ -212,10 +212,18 @@
             </div>
             
             <div style="text-align: center; margin-top: 30px;">
-                <div style="position: relative; display: inline-block;" onmouseover="document.querySelector('.wait-icon').classList.add('show')" onmouseout="document.querySelector('.wait-icon').classList.remove('show')">
-                    <img src="img/pisupisu.webp" alt="ぴすぴす" style="max-width: 100%; width: 600px; height: auto;">
-                    <img src="img/wait.svg" alt="待ってるよ" class="wait-icon">
+                <div style="position: relative; display: inline-block;">
+                    <img src="img/pisupisu.webp" alt="ぴすぴす" style="max-width: 100%; width: 600px; height: auto;" onmouseover="changeMessage(); document.querySelector('.wait-icon').classList.add('show'); document.querySelector('.wait-icon').classList.remove('hide')" onmouseout="document.querySelector('.wait-icon').classList.remove('show'); document.querySelector('.wait-icon').classList.add('hide')">
+                    <img src="img/message-01.svg" alt="メッセージ" class="wait-icon" id="random-message" style="pointer-events: none;">
                 </div>
+                <script>
+                    // マウスオーバーごとにmessage-01〜05をランダムに変更
+                    function changeMessage() {
+                        const messageNum = Math.floor(Math.random() * 5) + 1;
+                        const messageImg = document.getElementById('random-message');
+                        messageImg.src = 'img/message-0' + messageNum + '.svg';
+                    }
+                </script>
             </div>
         </div>
     </section>
